fixed scroll lagging on mobile - hero height is now set dynamically with js

--- a/assets/style.less
+++ b/assets/style.less
@@ -100,7 +100,7 @@ section {
 	background-size:cover;
 	//border-bottom: 1px solid #eee;
 
-	.sect-inner {height: 99vh;}
+	.sect-inner {min-height: 660px;}
 }
 
 .sect-works {
